--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -121,7 +121,14 @@ jobs:
       - name: format code
         run: pnpm fmt
       - name: auto commit
-        uses: stefanzweifel/git-auto-commit-action@v3.0.0
-        with:
-          commit_message: Apply Code Formatter Change
-          ref: ${{ github.head_ref }}
+        run: |
+          git remote set-url origin https://github-actions:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}
+          git config --global user.name "${GITHUB_ACTOR}"
+          git config --global user.email "${GITHUB_ACTOR}@users.noreply.github.com"
+          if (git diff --shortstat | grep '[0-9]'); then \
+            git add .; \
+            git commit -m "🤖 auto-fixable format by github-actions"; \
+            git push origin HEAD:${GITHUB_REF}; \
+          fi
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
